# Techmino-autoupdater

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: lang.rs  main.rs  multiplatform.rs
src/lang/: en.rs  es.rs  fr.rs  id.rs  ja.rs  pt.rs  symbol.rs  vt.rs  zh.rs  zh_trad.rs
