[package]
name = "techmino-autoupdater"
version = "0.1.0"
edition = "2021"

[dependencies]


[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-Wl,-subsystem,windows"]

[target.x86_64-unknown-linux-gnu]
[target.x86_64-apple-darwin]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html